// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex 컴포넌트 스냅샷: 기본, direction/justify/align/variant 조합 1`] = `
<div
  className="css-view-175oi2r"
  dir={null}
  style={
    {
      "alignItems": "stretch",
      "flexDirection": "row",
      "flexWrap": "nowrap",
      "justifyContent": "flex-start",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
  >
    스냅샷1
  </div>
</div>
`;

exports[`Flex 컴포넌트 스냅샷: 기본, direction/justify/align/variant 조합 2`] = `
<div
  className="css-view-175oi2r"
  dir={null}
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "8px",
      "justifyContent": "center",
    }
  }
>
  <div
    className="css-text-146c3p1"
    dir="auto"
  >
    스냅샷2
  </div>
</div>
`;
